--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -181,7 +181,7 @@
   "settings_askBeforeDeleting": "Ask before deleting",
   "settings_autoPlayVideos": "Auto play videos",
   "settings_hapticFeedback": "Haptic feedback",
-  "settings_autoTranslate": "Auto translate posts",
+  "settings_autoTranslate": "Auto translate posts/comments",
   "settings_themeMode": "Theme mode",
   "settings_themeMode_system": "System",
   "settings_themeMode_light": "Light",
