Fix read posts per account. Add option in behaviour settings to hide read posts. Add swipe action to toggle read status of post. Add option to content_menu to toggle read status of post.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -181,6 +181,7 @@
   "settings_askBeforeDeleting": "Ask before deleting",
   "settings_autoPlayVideos": "Auto play videos",
   "settings_hapticFeedback": "Haptic feedback",
+  "settings_hideReadPosts": "Hide read posts",
   "settings_themeMode": "Theme mode",
   "settings_themeMode_system": "System",
   "settings_themeMode_light": "Light",
@@ -421,6 +422,7 @@
   "action_boost": "Boost",
   "action_bookmark": "Bookmark",
   "action_reply": "Reply",
+  "action_markRead": "Mark As Read",
   "action_moderatePin": "Pin Post",
   "action_moderateMarkNSFW": "Mark NSFW",
   "action_moderateDelete": "Mod Delete",
