Darken read posts. Remove redundant `post_id` parameter from lemmy api mark_as_read. Change isRead query to use composite filter. Make Post read parameter non-nullable. Delete associated read posts from db on account deletion. Switch content_menu markRead text between "Mark as Read" and "Mark as Unread" depending on read status. Add new setting to feed actions screen for hideReadPosts. Move hideReadPosts from behaviour screen to feed defaults screen.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -181,7 +181,6 @@
   "settings_askBeforeDeleting": "Ask before deleting",
   "settings_autoPlayVideos": "Auto play videos",
   "settings_hapticFeedback": "Haptic feedback",
-  "settings_hideReadPosts": "Hide read posts",
   "settings_autoTranslate": "Auto translate posts/comments",
   "settings_themeMode": "Theme mode",
   "settings_themeMode_system": "System",
@@ -247,6 +246,7 @@
   "settings_feedDefaults_microblogSort": "Microblog Sort",
   "settings_feedDefaults_exploreSort": "Explore Sort",
   "settings_feedDefaults_commentSort": "Comment Sort",
+  "settings_feedDefaults_hideReadPosts": "Hide read posts",
   "settings_swipeActionLeftShort": "Left Short",
   "settings_swipeActionLeftLong": "Left Long",
   "settings_swipeActionRightShort": "Right Short",
@@ -425,6 +425,7 @@
   "action_bookmark": "Bookmark",
   "action_reply": "Reply",
   "action_markRead": "Mark As Read",
+  "action_markUnread": "Mark As Unread",
   "action_moderatePin": "Pin Post",
   "action_moderateMarkNSFW": "Mark NSFW",
   "action_moderateDelete": "Mod Delete",
