Add support for marking posts as read (#162)
* Add support for marking posts as read

* Fix read posts per account.
Add option in behaviour settings to hide read posts.
Add swipe action to toggle read status of post.
Add option to content_menu to toggle read status of post.

* Add feed actions to hide/show read posts.

* Darken read posts.
Remove redundant `post_id` parameter from lemmy api mark_as_read.
Change isRead query to use composite filter.
Make Post read parameter non-nullable.
Delete associated read posts from db on account deletion.
Switch content_menu markRead text between "Mark as Read" and "Mark as Unread" depending on read status.
Add new setting to feed actions screen for hideReadPosts.
Move hideReadPosts from behaviour screen to feed defaults screen.

* Darken post text in feed when marked as read.

* Mark posts as read on upvote/downvote/boost.

* Fix post displaying as unread after removing vote.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -246,6 +246,7 @@
   "settings_feedDefaults_microblogSort": "Microblog Sort",
   "settings_feedDefaults_exploreSort": "Explore Sort",
   "settings_feedDefaults_commentSort": "Comment Sort",
+  "settings_feedDefaults_hideReadPosts": "Hide read posts",
   "settings_swipeActionLeftShort": "Left Short",
   "settings_swipeActionLeftLong": "Left Long",
   "settings_swipeActionRightShort": "Right Short",
@@ -417,11 +418,14 @@
   "action_setFilter": "Set Filter",
   "action_setSort": "Set Sort",
   "action_setView": "Set View",
+  "action_showReadPosts": "Show Read Posts",
   "action_upvote": "Upvote",
   "action_downvote": "Downvote",
   "action_boost": "Boost",
   "action_bookmark": "Bookmark",
   "action_reply": "Reply",
+  "action_markRead": "Mark As Read",
+  "action_markUnread": "Mark As Unread",
   "action_moderatePin": "Pin Post",
   "action_moderateMarkNSFW": "Mark NSFW",
   "action_moderateDelete": "Mod Delete",
