--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -189,6 +189,8 @@
   "settings_enableTrueBlack": "Enable true black",
   "settings_enableTrueBlack_help": "Might save power on AMOLED displays",
   "settings_compactMode": "Compact mode",
+  "settings_hideActionButtons": "Hide action buttons",
+  "settings_hideActionButtons_help": "Hides the action buttons (vote, boost, reply, etc.) below each post and comment. The controls are still accessible in the overflow menu. It is recommended to enable swipe gestures in unison with this setting.",
   "settings_alwaysShowInstance": "Always show instance",
   "settings_alwaysShowInstance_help": "When enabled, the instance of a user/magazine will always display after their username",
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
