Add "mark post on scroll" option. (#176)
* Add "mark image on scroll" option.
Handle cases where entire pages in feed are either filtered out or read.

* Add localisation string.
Fix not marking posts as read when scrolling with scroll wheel.

* Add null check for pagingController.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -182,6 +182,8 @@
   "settings_autoPlayVideos": "Auto play videos",
   "settings_hapticFeedback": "Haptic feedback",
   "settings_autoTranslate": "Auto translate posts/comments",
+  "settings_markThreadsReadOnScroll": "Mark threads read on scroll",
+  "settings_markMicroblogsReadOnScroll": "Mark microblogs read on scroll",
   "settings_themeMode": "Theme mode",
   "settings_themeMode_system": "System",
   "settings_themeMode_light": "Light",
@@ -611,5 +613,6 @@
   },
   "errorPage_firstPage": "Something went wrong",
   "errorPage_firstPage_button": "Try Again",
-  "errorPage_newPage": "Something went wrong. Tap to try again."
+  "errorPage_newPage": "Something went wrong. Tap to try again.",
+  "errorPage_caughtUp": "You're all caught up.\nLoad older items?"
 }
