--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -198,6 +198,9 @@
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
   "settings_fullImageSizeThreads": "Full image size for threads",
   "settings_fullImageSizeMicroblogs": "Full image size for microblogs",
+  "settings_hideAppbarScroll": "Hide AppBar on scroll",
+  "settings_hideTabsScroll": "Hide tabs on scroll",
+  "settings_hideFABScroll": "Hide FAB on scroll",
   "settings_reduceAnimationMotion": "Reduce motion in animations",
   "settings_aboutInterstellar": "About Interstellar",
   "settings_donate": "Donate",
