--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -198,7 +198,7 @@
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
   "settings_fullImageSizeThreads": "Full image size for threads",
   "settings_fullImageSizeMicroblogs": "Full image size for microblogs",
-  "settings_hideUIScroll": "Hide UI on scroll",
+  "settings_hideUIScroll": "Hide feed UI on scroll",
   "settings_reduceAnimationMotion": "Reduce motion in animations",
   "settings_aboutInterstellar": "About Interstellar",
   "settings_donate": "Donate",
