Update new setting's name consistency and position

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -193,12 +193,12 @@
   "settings_compactMode": "Compact mode",
   "settings_hideActionButtons": "Hide action buttons",
   "settings_hideActionButtons_help": "Hides the action buttons (vote, boost, reply, etc.) below each post and comment. The controls are still accessible in the overflow menu. It is recommended to enable swipe gestures in unison with this setting.",
+  "settings_hideFeedUIOnScroll": "Hide feed UI on scroll",
   "settings_alwaysShowInstance": "Always show instance",
   "settings_alwaysShowInstance_help": "When enabled, the instance of a user/magazine will always display after their username",
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
   "settings_fullImageSizeThreads": "Full image size for threads",
   "settings_fullImageSizeMicroblogs": "Full image size for microblogs",
-  "settings_hideUIScroll": "Hide feed UI on scroll",
   "settings_reduceAnimationMotion": "Reduce motion in animations",
   "settings_aboutInterstellar": "About Interstellar",
   "settings_donate": "Donate",
